# commcare-app-tools

./: .gitignore  AGENTS.md  README.md  gradlew  gradlew.bat  pyproject.toml
.claude/skills/commcare-test-builder/: SKILL.md
src/commcare_app_tools/: __init__.py
src/commcare_app_tools/api/: client.py  endpoints.py
src/commcare_app_tools/auth/: oauth.py  session.py  token_store.py
src/commcare_app_tools/cli/: api.py  apps.py  auth.py  cases.py  commcare_cli.py  config_cmd.py  domains.py  env.py  formplayer.py  forms.py  lookup_tables.py  main.py  reports.py  test.py  users.py  web.py  workspace.py
src/commcare_app_tools/commcare_cli/: __init__.py  builder.py  runner.py
src/commcare_app_tools/config/: environments.py  settings.py
src/commcare_app_tools/formplayer/: __init__.py  compose.py  docker.py  settings.py
src/commcare_app_tools/test/: __init__.py  definition.py  runner.py
src/commcare_app_tools/utils/: output.py
src/commcare_app_tools/web/: __init__.py  app.py
src/commcare_app_tools/web/api/: __init__.py  cli.py  config.py
src/commcare_app_tools/web/frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
src/commcare_app_tools/web/frontend/src/components/: ConfigWizard.tsx
src/commcare_app_tools/workspace/: __init__.py  manager.py
